--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -312,6 +312,13 @@ html {
     margin: 10px auto;
 }
 
+.section-heading .line-white {
+    width: 60px;
+    height: 3px;
+    background-color: #ffffff;
+    margin: 10px auto;
+}
+
 .section-heading span {
     margin-top: 5px;
     font-size: 16px;
@@ -372,6 +379,23 @@ button:hover {
 .left-image img,
 .right-image img {
     border-radius: 5px;
+}
+
+.company_logo{
+    margin-top: 50px;
+    margin-left: 100px;
+    margin-right: 0px;
+    border-radius: 5px;
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    text-align: center;
+}
+
+.company_description{
+    margin-left: 0px;
+    margin-right: 100px;
+    text-align: left;
 }
 
 .right-image-post h4,
